[gd_scene load_steps=8 format=3 uid="uid://drn2721v5j32n"]

[ext_resource type="Texture2D" uid="uid://cvexp27t1q2ql" path="res://assets/space_background.png" id="1_0e83r"]
[ext_resource type="Script" path="res://main.gd" id="1_d0co4"]
[ext_resource type="PackedScene" uid="uid://b2md6k6q7xa07" path="res://rock.tscn" id="2_fq47o"]
[ext_resource type="PackedScene" uid="uid://coa7c58uk1g5y" path="res://player.tscn" id="2_vmy3p"]
[ext_resource type="PackedScene" uid="uid://c3tbtgx0br8l7" path="res://enemy.tscn" id="3_08gni"]
[ext_resource type="PackedScene" uid="uid://lkup5sf6na81" path="res://hud.tscn" id="5_vqmhb"]

[sub_resource type="Curve2D" id="Curve2D_hrnik"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 8, 0, 0, 0, 0, 1912, 16, 0, 0, 0, 0, 1920, 1088, 0, 0, 0, 0, -8, 1104, 0, 0, 0, 0, 0, 8)
}
point_count = 5

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_d0co4")
rock_scene = ExtResource("2_fq47o")
enemy_scene = ExtResource("3_08gni")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_0e83r")

[node name="Player" parent="." instance=ExtResource("2_vmy3p")]
max_contacts_reported = 1

[node name="RockPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_hrnik")

[node name="RockSpawn" type="PathFollow2D" parent="RockPath"]
position = Vector2(0, 8)
rotation = 0.00418408

[node name="HUD" parent="." instance=ExtResource("5_vqmhb")]

[node name="EnemyTimer" type="Timer" parent="."]

[connection signal="dead" from="Player" to="." method="game_over"]
[connection signal="shield_changed" from="Player" to="HUD" method="update_shield"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
